Add user auth
