# internal/dtos/request/UserLoginRequestDto.go
@@ -1,0 +1,6 @@
+package request
+
+type UserLoginRequestDto struct {
+	Email    string `gorm:"uniqueIndex"`
+	Password string
+}
